--- a/app/templates/edit_travel.html
+++ b/app/templates/edit_travel.html
@@ -5,6 +5,8 @@
 {% block content %}
 <h2>旅行を登録</h2>
 <form method="post" action="{{ url_for('main.edit_travel', travel_id=travel.id) }}">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    
     <div class="newtravel-container">    
         <label>旅行タイトル <br><input type="text" name="title" value="{{ travel.title }}"></label><br>
         <label>目的地 <br>
