--- a/app/templates/new_travel.html
+++ b/app/templates/new_travel.html
@@ -5,6 +5,7 @@
 {% block content %}
 <h2>旅行を登録</h2>
 <form method="post" action="{{ url_for('main.new_travel') }}">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="newtravel-container">    
         <label>旅行タイトル <br><input type="text" name="title"></label><br>
         <label>目的地 <br>
